version ajouter 16-1-2026